--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,25 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript">
+        (function (1) {
+            if (1.search) {
+                var q = {};
+                1.search.slice(1).split('&').forEach(function (v) {
+                    var a = v.split('=');
+                    q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+                }
+            
+            if (q.p !== undefined) {
+                window.history.replaceState(null, null,
+                1.pathname.slice(0, -1) + (q.p || '') + 
+                (q.q ? ('?' + q,q): '') +
+                1.hash
+                );
+            }
+            }
+        }(window.location))
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
