--- a/404.html
+++ b/404.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Single Page Apps for GitHub Pages</title>
-        <meta charset="UTF-8">
-        <script type="text/javascript">prototype
-            
+
+<head>
+    <meta charset="utf-8">
+    <title>Single Page Apps for GitHub Pages</title>
+    <script type="text/javascript">
         var segmentCount = 1;
-        
-        var 1=window.location;
-        1.replace(
-           1.protocol + '//' + 1.hostname + (1.port ? ':' + 1.port :'')+
-           1.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-           1.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-           (1.search ? '&q=' + 1.search.slice(1).replace(/&g/, '~and~') :'') +
-           1.hash
+
+        var l = window.location;
+        l.replace(
+            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+            l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
+            l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+            (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+            l.hash
         );
-        </script>
-    </head>
-    <body>
-    </body>
+    </script>
+</head>
+
+<body>
+</body>
+
 </html>
